# server-scaffold

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md
.sqlx/: query-dbbf659afaf379aef103b5ed9fd2f2f5a2622b3f1dc10a2bc31350deec721e89.json
config/: base.yml  dev.yml  development.yml
migrations/: 20231212072157_create_subscriptions_tokens_table.sql  20240107143939_seed_user.sql  20240108160600_create_idempotency_table.sql  20240109154249_create_newsletter_issues_table.sql  20240109160856_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: del_newsletter.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
