[package]
name = "server-scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server-scaffold"

[dependencies]
actix-web = "4.4.0"
uuid = { version = "1.5.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
chrono = "0.4.31"
config = "0.13.3"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
  "postgres",
  "uuid",
  "chrono",
  "runtime-tokio",
] }
tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.8"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.22", features = ["json"] }
thiserror = "1.0.51"
anyhow = "1.0.75"
base64 = "0.21.5"
argon2 = { version = "0.5.2", features = ["std"] }

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.1"
linkify = "0.10.0"
once_cell = "1.18.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.108"
wiremock = "0.5.22"
